fix text wrapping in date picker input

--- a/packages/components/src/components/DatePicker/styles/datePickerInput.module.scss
+++ b/packages/components/src/components/DatePicker/styles/datePickerInput.module.scss
@@ -64,8 +64,16 @@
     @include transitions.transition-all;
 }
 
+.icon {
+    flex-shrink: 0;
+}
+
 .dateName {
     color: var(--color-primary-default);
+    min-width: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .button {
